Fixed visibility of components for certain roles

--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-body {
+* {
   font-family: "Open Sans", sans-serif;
-}
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .loginPageContainer {
@@ -118,36 +80,16 @@ button{
     min-height: 100vh;
 }
 .logo{
-    margin-left: 3rem;
+    margin-left: 3vw;
+    width: 5vw;
+    height: 10vh;
 }
 .main { 
     grid-area: 1 / 2 / 6 / 6;
     background-color: #1e293b;
     color:white;
     min-height: 100vh;
-    padding-top: 140px;
-}
-
-.modal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-  background-color: #cbd5e1;
-  color:black;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 400px;
-  text-align: center;
+    padding-top: 15vh;
 }
 
 .addProjectTitle {
@@ -171,6 +113,7 @@ button{
   cursor: pointer;
   margin-right: 5px;
   border-radius: 20px;
+  width: 75px;
 }
 
 .addProjectButton:hover {
@@ -183,24 +126,25 @@ opacity: 1;
 }
 
 .modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
-  background: white;
+  background-color: white;
+  color:black;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  max-height: 80%;
-  overflow-y: auto;
+  width: 400px;
+  text-align: center;
 }
 
 .assignUsersTitle {
@@ -288,8 +232,8 @@ opacity: 1;
   border: 1px solid #ccc;
   border-radius: 5px;
   color:black;
-  width: 20vw;
-  height: 2vh;
+  width: 30vw;
+  height: 10vh;
 }
 
 .inputStatus{
@@ -309,7 +253,6 @@ opacity: 1;
   border-radius: 4px;
   cursor: pointer;
   margin-right: 5px;
-  margin-top: 20px;
   border-radius: 20px;
 }
 .addTaskButton:hover{
@@ -395,7 +338,7 @@ select{
 .leftMenuButton{
   width: 100%;
   height: 10vh;
-  font-size: xx-large;
+  font-size: 1.5vw;
   background-color: #1e293b;
   border: none;
   border-bottom: 2px #64748b solid;
@@ -413,62 +356,41 @@ select{
 
 .projects-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  height: 200px;
-  grid-gap: 20px;
-  color:white;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  height: auto;
+  grid-gap: 10px;
+  color: white;
   padding: 20px;
   text-align: center;
-}
-
-.project-item {
-  padding: 10px;
-  border-radius: 8px;
-  cursor: pointer;
-  border: 1px white solid;
-}
-
-.project-item:hover {
-  background-color: #334155;
-}
-
-.user-image{
-  height: 30px;
-  width: 30px;
-}
-
-.user-images{
-padding-top: 40%;
 }
 
 .projects-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  height: 200px;
-  grid-gap: 20px;
-  color:white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  color: white;
   padding: 20px;
-  text-align: center;
 }
 
 .project-item {
+  width: calc(20% - 20px);
+  margin-bottom: 30px;
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
   border: 1px white solid;
+  font-size: 3vh;
+  min-height: 150px;
+  min-width: 150px;
+  box-sizing: border-box;
 }
 
 .project-item:hover {
   background-color: #334155;
 }
 
-.user-image{
-  height: 30px;
-  width: 30px;
-}
-
 .user-images{
-padding-top: 40%;
+  padding-top: 10px;
 }
 
 .todo,
@@ -648,7 +570,7 @@ img{
 }
 
 select option:checked{
-  background: #64748b -webkit-linear-gradient(bottom, #64748b 0%, #64748b 100%);
+  background: #64748b;
 }
 
 .taskDetailsTitle{
@@ -692,5 +614,58 @@ select option:checked{
   margin-top: 10px;
   width: 86%;
   height: 40%;
+}
+
+.addUserTitle {
+  margin-bottom: 15px;
+}
+
+.addUserInput {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.addUserButton {
+  background-color: #475569;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 5px;
+  border-radius: 20px;
+  width: 75px;
+}
+
+.addUserButton:hover {
+  background-color: #334155;
+}
+
+.roleSelect {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  width: 5vw;
+  text-align: center;
+  height: 3vh;
+}
+
+.roleSelect option {
+  background-color: white;
+  color: black;
+}
+
+.roleSelect option:checked {
+  background-color: #cbd5e1;
+}
+
+.roleSelect option:hover {
+  background: #64748b;
 }
 
